--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -900,6 +900,10 @@ video {
   width: 7rem;
 }
 
+.w-3\/5 {
+  width: 60%;
+}
+
 .w-40 {
   width: 10rem;
 }
@@ -934,6 +938,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[15rem\] {
+  width: 15rem;
 }
 
 .min-w-full {
@@ -1034,6 +1042,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .gap-1 {
@@ -1276,6 +1288,11 @@ video {
   background-color: rgb(255 255 255 / 0.45);
 }
 
+.bg-cyan-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
 }
@@ -1443,8 +1460,8 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pb-36 {
-  padding-bottom: 9rem;
+.pb-32 {
+  padding-bottom: 8rem;
 }
 
 .pb-5 {
@@ -1489,10 +1506,6 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
-}
-
-.pb-32 {
-  padding-bottom: 8rem;
 }
 
 .text-left {
@@ -1665,6 +1678,11 @@ video {
 
 .shadow-indigo-500\/40 {
   --tw-shadow-color: rgb(99 102 241 / 0.4);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-cyan-500\/50 {
+  --tw-shadow-color: rgb(6 182 212 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
