--- a/404/404.css
+++ b/404/404.css
@@ -42,7 +42,7 @@ body {
 
 .circless p {
 	font-size: 240px;
-	color: #fff;
+	color: #0277F9;
 	padding-top: 60px;
 	position: relative;
   z-index: 9;
@@ -144,4 +144,8 @@ body {
 	50% { top: 240px; right: 45%; opacity:0.8; }
 	75% { top: 100px; right: 35%;  opacity:0.6; }
 	100% { top: 0px; right: 4%; opacity: 0.5; }
+}
+
+.circless>p{
+
 }
