--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -666,12 +666,8 @@ video {
   margin: 1.5rem;
 }
 
-.m-20 {
-  margin: 5rem;
-}
-
-.m-10 {
-  margin: 2.5rem;
+.m-auto {
+  margin: auto;
 }
 
 .mx-5 {
@@ -717,16 +713,6 @@ video {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
 .-mb-1 {
@@ -1142,10 +1128,6 @@ video {
   background-color: rgb(0 118 249 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#02D7FF3B\] {
-  background-color: #02D7FF3B;
-}
-
 .bg-\[\#2c23238f\] {
   background-color: #2c23238f;
 }
@@ -1206,6 +1188,11 @@ video {
 
 .bg-white\/45 {
   background-color: rgb(255 255 255 / 0.45);
+}
+
+.bg-sky-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-80 {
@@ -1753,23 +1740,32 @@ video {
     margin: 1.25rem;
   }
 
-  .md\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-  }
-
   .md\:mx-10 {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
   }
 
-  .md\:mx-5 {
-    margin-left: 1.25rem;
-    margin-right: 1.25rem;
+  .md\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
+  .md\:my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .md\:my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .md\:mt-20 {
@@ -1782,10 +1778,6 @@ video {
 
   .md\:mt-5 {
     margin-top: 1.25rem;
-  }
-
-  .md\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .md\:block {
@@ -1899,12 +1891,16 @@ video {
     padding-bottom: 2.5rem;
   }
 
-  .md\:pb-20 {
-    padding-bottom: 5rem;
+  .md\:pb-2 {
+    padding-bottom: 0.5rem;
   }
 
   .md\:pb-36 {
     padding-bottom: 9rem;
+  }
+
+  .md\:pb-5 {
+    padding-bottom: 1.25rem;
   }
 
   .md\:pl-10 {
@@ -1915,12 +1911,8 @@ video {
     padding-top: 5rem;
   }
 
-  .md\:pb-5 {
-    padding-bottom: 1.25rem;
-  }
-
-  .md\:pb-2 {
-    padding-bottom: 0.5rem;
+  .md\:pt-10 {
+    padding-top: 2.5rem;
   }
 
   .md\:text-3xl {
