--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,14 @@ p {
 
 }
 
+/* to remove background on mobile*/
+@media (max-width: 640px) {
+  .hero-section {
+    background-image: none;
+    background-color: #010A94;
+  }
+}
+
 .work-process {
   background: linear-gradient(rgb(10 10 10 / 60%), rgb(0 0 0 / 63%)), url(../images/banner_images/2149908695.webp)no-repeat center/cover;
   background-attachment: fixed;
