do changes in heading form footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,17 @@
 h2 {
   color: rgb(75, 85, 99) !important;
+  text-transform: capitalize !important;
+  
 }
 
 h3 {
   color: rgb(75, 85, 99) !important;
+  text-transform: capitalize;
 
 }
-
+h1{
+  text-transform: capitalize !important;
+}
 p {
   color: rgb(107, 114, 128) !important;
 }
@@ -32,7 +37,7 @@ p {
 }
 
 .hero-section {
-  background: url(../images/banner_images/homebanner.webp) no-repeat top center/cover;
+  background: url(../images/banner_images/homebanner2.webp) no-repeat top center/cover;
   background-attachment: fixed;
 
 }
@@ -96,9 +101,9 @@ z-index: 1;
   top: 50%;
   left: 30%;
   transform: translate(-50%, -50%);
-  border: 2px solid black;
+  border: 2px solid #0076F9;
   border-radius: 5em;
-  background-color: rgb(154, 205, 255);
+  background-color: #fff;
   padding: 0.75rem;
   text-decoration: none;
   text-transform: uppercase;
