--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -622,10 +622,6 @@ video {
   top: -5rem;
 }
 
-.top-\[-88px\] {
-  top: -88px;
-}
-
 .top-\[17rem\] {
   top: 17rem;
 }
@@ -943,10 +939,6 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-5 {
@@ -1393,6 +1385,10 @@ video {
   padding-top: 6rem;
 }
 
+.pt-32 {
+  padding-top: 8rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -1466,6 +1462,11 @@ video {
 
 .leading-relaxed {
   line-height: 1.625;
+}
+
+.text-\[\#000A93\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 10 147 / var(--tw-text-opacity));
 }
 
 .text-\[\#0076F9\] {
@@ -1545,11 +1546,6 @@ video {
 
 .text-white\/90 {
   color: rgb(255 255 255 / 0.9);
-}
-
-.text-\[\#000A93\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 10 147 / var(--tw-text-opacity));
 }
 
 .opacity-75 {
@@ -1746,16 +1742,12 @@ video {
     margin-bottom: 0.75rem;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
   .md\:mt-20 {
     margin-top: 5rem;
+  }
+
+  .md\:mt-28 {
+    margin-top: 7rem;
   }
 
   .md\:mt-40 {
@@ -1764,22 +1756,6 @@ video {
 
   .md\:mt-5 {
     margin-top: 1.25rem;
-  }
-
-  .md\:mt-28 {
-    margin-top: 7rem;
-  }
-
-  .md\:mt-36 {
-    margin-top: 9rem;
-  }
-
-  .md\:-mt-28 {
-    margin-top: -7rem;
-  }
-
-  .md\:-mt-40 {
-    margin-top: -10rem;
   }
 
   .md\:block {
@@ -1900,32 +1876,20 @@ video {
     padding-bottom: 1.25rem;
   }
 
+  .md\:pb-\[5rem\] {
+    padding-bottom: 5rem;
+  }
+
   .md\:pl-10 {
     padding-left: 2.5rem;
   }
 
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
   .md\:pt-20 {
     padding-top: 5rem;
-  }
-
-  .md\:pb-20 {
-    padding-bottom: 5rem;
-  }
-
-  .md\:pb-28 {
-    padding-bottom: 7rem;
-  }
-
-  .md\:pb-32 {
-    padding-bottom: 8rem;
-  }
-
-  .md\:pb-\[6rem\] {
-    padding-bottom: 6rem;
-  }
-
-  .md\:pb-\[5rem\] {
-    padding-bottom: 5rem;
   }
 
   .md\:text-2xl {
