--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ h1{
   text-transform: capitalize !important;
   font-size: 2.125rem !important;
   font-weight: normal !important;
+  line-height: normal !important;
 }
 h2 {
   color: rgb(75, 85, 99) !important;
@@ -305,6 +306,9 @@ form {
   overflow: hidden;
   position: relative;
 }
+input[type="file"]{
+  color: #fff;
+}
 
 .title {
   color: #fff;
@@ -393,6 +397,7 @@ textarea.input {
   pointer-events: none;
   z-index: 500;
 }
+
 
 .input-container span:before,
 .input-container span:after {
@@ -1105,3 +1110,9 @@ footer {
   position: sticky;
   bottom: 0;
 }
+
+
+
+
+
+
